deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike-website
  template:
    metadata:
      labels:
        app: bike-website
    spec:
      containers:
        - name: bike-website
          image: 570814275564.dkr.ecr.ap-south-1.amazonaws.com/bike-website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
