service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bike-website-service
spec:
  type: ClusterIP
  selector:
    app: bike-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
